Converted Custom/Json fields to JSONB column types.